BindingAdapter를 사용하여 NormalAlarmActivity를 구현 1. 그 과정에서 일부분 refactory 실시

--- a/app/src/main/res/layout/activity_make_alarm.xml
+++ b/app/src/main/res/layout/activity_make_alarm.xml
@@ -2,10 +2,16 @@
 <layout>
 
     <data>
+
         <variable
             name="alarmData"
             type="com.easyo.pairalarm.database.table.AlarmData" />
+
+        <variable
+            name="weekend"
+            type="com.easyo.pairalarm.database.table.Weekend" />
     </data>
+
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -38,6 +44,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
+                    android:text="@{alarmData.name}"
                     android:textColor="@color/white" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -54,8 +61,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    app:hour="@{alarmData.hour}"
-                    android:theme="@style/numberPickerCustomTheme" />
+                    android:theme="@style/numberPickerCustomTheme"
+                    app:hour="@{alarmData.hour}" />
 
                 <TextView
                     android:id="@+id/textView_nothing"
@@ -71,16 +78,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:value="@{alarmData.minute}"
-                    android:theme="@style/numberPickerCustomTheme" />
+                    android:theme="@style/numberPickerCustomTheme"
+                    android:value="@{alarmData.minute}" />
 
                 <NumberPicker
                     android:id="@+id/numberPickerAMPM"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
-                    app:hourForAMPM="@{alarmData.hour}"
-                    android:theme="@style/numberPickerCustomTheme" />
+                    android:theme="@style/numberPickerCustomTheme"
+                    app:hourForAMPM="@{alarmData.hour}" />
             </LinearLayout>
 
             <LinearLayout
@@ -88,6 +95,7 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
+                <!-- 요일 시작-->
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/monButton"
                     android:layout_width="50dp"
@@ -103,7 +111,9 @@
                     android:textSize="20dp"
                     app:cornerRadius="60dp"
                     app:strokeColor="@color/background"
-                    app:strokeWidth="2dp" />
+                    app:strokeWidth="2dp"
+                    app:week="@{weekend.WEEK}"
+                    app:weekClicked="@{alarmData.mon}" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/tueButton"
@@ -120,7 +130,9 @@
                     android:textSize="20dp"
                     app:cornerRadius="60dp"
                     app:strokeColor="@color/background"
-                    app:strokeWidth="2dp" />
+                    app:strokeWidth="2dp"
+                    app:week="@{weekend.WEEK}"
+                    app:weekClicked="@{alarmData.tue}" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/wedButton"
@@ -137,7 +149,9 @@
                     android:textSize="20dp"
                     app:cornerRadius="60dp"
                     app:strokeColor="@color/background"
-                    app:strokeWidth="2dp" />
+                    app:strokeWidth="2dp"
+                    app:week="@{weekend.WEEK}"
+                    app:weekClicked="@{alarmData.wed}" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/thurButton"
@@ -154,7 +168,9 @@
                     android:textSize="20dp"
                     app:cornerRadius="60dp"
                     app:strokeColor="@color/background"
-                    app:strokeWidth="2dp" />
+                    app:strokeWidth="2dp"
+                    app:week="@{weekend.WEEK}"
+                    app:weekClicked="@{alarmData.thu}" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/friButton"
@@ -171,7 +187,9 @@
                     android:textSize="20dp"
                     app:cornerRadius="60dp"
                     app:strokeColor="@color/background"
-                    app:strokeWidth="2dp" />
+                    app:strokeWidth="2dp"
+                    app:week="@{weekend.WEEK}"
+                    app:weekClicked="@{alarmData.fri}" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/satButton"
@@ -188,7 +206,9 @@
                     android:textSize="20dp"
                     app:cornerRadius="60dp"
                     app:strokeColor="@color/background"
-                    app:strokeWidth="2dp" />
+                    app:strokeWidth="2dp"
+                    app:week="@{weekend.SAT}"
+                    app:weekClicked="@{alarmData.sat}" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/sunButton"
@@ -205,7 +225,9 @@
                     android:textSize="20dp"
                     app:cornerRadius="60dp"
                     app:strokeColor="@color/background"
-                    app:strokeWidth="2dp" />
+                    app:strokeWidth="2dp"
+                    app:week="@{weekend.SUN}"
+                    app:weekClicked="@{alarmData.sun}" />
             </LinearLayout>
 
             <LinearLayout
@@ -218,16 +240,16 @@
                     android:layout_width="35dp"
                     android:layout_height="55dp"
                     android:layout_weight="1"
-                    app:vibrateMode="@{alarmData.vibration}"
-                    app:srcCompat="@drawable/ic_no_vib" />
+                    app:srcCompat="@drawable/ic_no_vib"
+                    app:vibrateMode="@{alarmData.vibration}" />
 
                 <ImageView
                     android:id="@+id/image_volume"
                     android:layout_width="35dp"
                     android:layout_height="55dp"
                     android:layout_weight="1"
-                    app:volume="@{alarmData.volume}"
-                    app:srcCompat="@drawable/volume_icon" />
+                    app:srcCompat="@drawable/volume_icon"
+                    app:volume="@{alarmData.volume}" />
 
                 <SeekBar
                     android:id="@+id/volumeSeekBar"
@@ -237,7 +259,7 @@
                     android:layout_weight="6"
                     android:max="100"
                     android:min="0"
-                    android:progress="100"
+                    android:progress="@{alarmData.volume}"
                     android:theme="@style/seekbarTheme"
                     android:thumb="?android:attr/textSelectHandle" />
             </LinearLayout>
@@ -341,7 +363,8 @@
                     android:gravity="center"
                     android:text="@string/alarmSet_selectBellTextTitle"
                     android:textColor="@color/white"
-                    android:textSize="16dp" />
+                    android:textSize="16dp"
+                    app:bellIndex="@{alarmData.bell}" />
 
                 <TextView
                     android:id="@+id/text_currentMode"
@@ -352,7 +375,8 @@
                     android:gravity="center"
                     android:text="@string/alarmSet_selectModeTextTitle"
                     android:textColor="@color/white"
-                    android:textSize="16dp" />
+                    android:textSize="16dp"
+                    app:alarmMode="@{alarmData.mode}" />
             </LinearLayout>
 
             <LinearLayout
@@ -383,6 +407,7 @@
                     android:backgroundTint="@color/mainColor"
                     android:padding="12dp"
                     android:text="@string/update"
+                    app:alarmCode="@{alarmData.alarmCode}"
                     app:cornerRadius="20dp" />
             </LinearLayout>
 
