알람을 off -> on 했을 때 바로 알람이 울리는 버그 수정

--- a/app/src/main/res/layout/activity_make_alarm.xml
+++ b/app/src/main/res/layout/activity_make_alarm.xml
@@ -88,7 +88,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:theme="@style/numberPickerCustomTheme"
-                    app:hourForAMPM="@{alarmData.hour}" />
+                    app:hourForAMPM="@{alarmData.hour}"
+                    app:minForAMPM="@{alarmData.minute}"/>
             </LinearLayout>
 
             <LinearLayout
