알람 셋팅하는 Activity 이름 변경(이름에 Set 붙임)

--- a/app/src/main/res/layout/activity_normal_alarm.xml
+++ b/app/src/main/res/layout/activity_normal_alarm.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background"
-        tools:context="com.easyo.pairalarm.ui.activity.NormalAlarmActivity">
+        tools:context="com.easyo.pairalarm.ui.activity.NormalAlarmSetActivity">
 
         <LinearLayout
             android:id="@+id/rootLayout"
