--- a/app/src/main/res/layout/dialog_bell_set.xml
+++ b/app/src/main/res/layout/dialog_bell_set.xml
@@ -9,7 +9,7 @@
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/rounded_corner_orange"
+        android:background="@drawable/item_rounded_corner_orange"
         android:orientation="vertical"
         android:padding="40dp">
 
@@ -33,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nanumgothicbold"
-            android:textSize="17dp"
+            android:textSize="17sp"
             android:textColor="@color/white"
             android:text="@string/bellType_Normal_Walking" />
 
@@ -41,7 +41,7 @@
             android:id="@+id/radioButton_N2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="17dp"
+            android:textSize="17sp"
             android:fontFamily="@font/nanumgothicbold"
             android:textColor="@color/white"
             android:text="@string/bellType_Normal_PianoMan" />
@@ -50,7 +50,7 @@
             android:id="@+id/radioButton_N3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="17dp"
+            android:textSize="17sp"
             android:fontFamily="@font/nanumgothicbold"
             android:textColor="@color/white"
             android:text="@string/bellType_Normal_Happy" />
@@ -59,7 +59,7 @@
             android:id="@+id/radioButton_N4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="17dp"
+            android:textSize="17sp"
             android:fontFamily="@font/nanumgothicbold"
             android:textColor="@color/white"
             android:text="@string/bellType_Normal_Lonely" />
