--- a/app/src/main/res/drawable/item_uppper_small_rounded_corner_clear.xml
+++ b/app/src/main/res/drawable/item_uppper_small_rounded_corner_clear.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/itemBackground"/>
     <corners
-        android:bottomLeftRadius="40dp"
-        android:bottomRightRadius="40dp"/>
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp"/>
 <!--    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />-->
 </shape>
