--- a/app/src/main/res/layout/setting_item.xml
+++ b/app/src/main/res/layout/setting_item.xml
@@ -1,8 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="title"
+            type="String" />
+
+        <variable
+            name="description"
+            type="String" />
+
+        <variable
+            name="isFirstItem"
+            type="Boolean" />
+
+        <variable
+            name="isLastItem"
+            type="Boolean" />
+
+        <import type="android.text.TextUtils" />
+    </data>
 
     <LinearLayout
+        android:id="@+id/setting_item_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/itemBackground"
@@ -12,12 +35,16 @@
             android:id="@+id/setting_item_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="12dp"
+            android:layout_marginHorizontal="12dp"
+            android:layout_marginTop="@dimen/element_spacing_xnormal"
+            android:layout_marginBottom="@dimen/element_spacing_xnormal"
             android:background="@drawable/sub_item_rounded_corner_clear"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingHorizontal="20dp"
-            android:paddingVertical="12dp">
+            android:paddingHorizontal="12dp"
+            android:paddingVertical="12dp"
+            app:setMarginBottom="@{isFirstItem ? @dimen/element_spacing_none : @dimen/element_spacing_xnormal}"
+            app:setMarginTop="@{isLastItem ? @dimen/element_spacing_none : @dimen/element_spacing_xnormal}">
 
             <ImageView
                 android:id="@+id/setting_sub_item_image"
@@ -30,19 +57,41 @@
                 app:srcCompat="@drawable/calculator"
                 app:tint="@color/sub_item_text_color" />
 
-            <TextView
-                android:id="@+id/setting_sub_item_text"
+            <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginStart="20dp"
-                android:layout_marginEnd="12dp"
-                android:text="Setting Text"
-                android:textColor="@color/sub_item_text_color"
-                android:textSize="16sp"
+                android:layout_marginEnd="40dp"
+                android:gravity="center_vertical"
+                android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/setting_sub_item_switch"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/setting_sub_item_image"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/setting_item_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="@{title}"
+                    android:textColor="@color/sub_item_text_color"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    tools:text="Setting title" />
+
+                <TextView
+                    android:id="@+id/setting_item_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="@{description}"
+                    android:textColor="@color/sub_item_text_color"
+                    app:visible="@{!TextUtils.isEmpty(description)}"
+                    tools:text="Setting description" />
+            </LinearLayout>
 
             <com.google.android.material.switchmaterial.SwitchMaterial
                 android:id="@+id/setting_sub_item_switch"
