전반적인 dialog 리팩토링 1. 기존에 있던 SimpleDialog에 AlarmMode를 선택할 때도 사용할 수 있도록 리뉴얼 2. BellSelectDialogFragment 리팩토링

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,7 +2,8 @@
 <resources>
     <!-- Setting -->
     <string-array name="setting_item_alarm_text_array">
-        <item>QuickAlarm Setting</item>
+        <item>QuickAlarm Bell</item>
+        <item>QuickAlarm Mode</item>
     </string-array>
 
     <string-array name="setting_item_ect_text_array">
