일요일 클릭 버그 수정 및 AlarmItem의 UI를 dataBinding으로 표현

--- a/app/src/main/res/layout/activity_simple_alarm.xml
+++ b/app/src/main/res/layout/activity_simple_alarm.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="alarmData"
             type="com.easyo.pairalarm.database.table.AlarmData" />
     </data>
+
     <ScrollView
         android:id="@+id/scrollLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background"
-        >
+        android:background="@color/background">
 
         <LinearLayout
             android:id="@+id/rootLayout"
@@ -38,6 +38,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
+                    android:maxLines="1"
+                    android:inputType="text"
                     android:textColor="@color/white" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -56,7 +58,7 @@
                     android:fontFamily="@font/nanumgothicextrabold"
                     android:text="00"
                     android:textColor="@color/white"
-                    android:textSize="65dp" />
+                    android:textSize="65sp" />
 
                 <TextView
                     android:id="@+id/textView"
@@ -67,7 +69,7 @@
                     android:fontFamily="@font/nanumgothicextrabold"
                     android:text=":"
                     android:textColor="@color/white"
-                    android:textSize="65dp" />
+                    android:textSize="65sp" />
 
                 <TextView
                     android:id="@+id/plusMinText"
@@ -76,7 +78,7 @@
                     android:fontFamily="@font/nanumgothicextrabold"
                     android:text="00"
                     android:textColor="@color/white"
-                    android:textSize="65dp" />
+                    android:textSize="65sp" />
 
             </LinearLayout>
 
@@ -87,7 +89,7 @@
                 android:gravity="center"
                 android:text="@string/alarmSet_simpleAlarmSubText"
                 android:textColor="@color/new_subTextColor"
-                android:textSize="20dp" />
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -311,7 +313,7 @@
                     android:gravity="center"
                     android:text="@string/alarmSet_selectBellTextTitle"
                     android:textColor="@color/white"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     app:bellIndex="@{alarmData.bell}" />
 
                 <TextView
@@ -323,7 +325,7 @@
                     android:gravity="center"
                     android:text="@string/alarmSet_selectModeTextTitle"
                     android:textColor="@color/white"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     app:alarmMode="@{alarmData.mode}" />
             </LinearLayout>
 
