--- a/app/src/main/res/layout/alarm_item.xml
+++ b/app/src/main/res/layout/alarm_item.xml
@@ -6,6 +6,10 @@
     <data>
 
         <variable
+            name="weekend"
+            type="com.easyo.pairalarm.database.table.Weekend" />
+
+        <variable
             name="alarmData"
             type="com.easyo.pairalarm.database.table.AlarmData" />
     </data>
@@ -33,15 +37,17 @@
                 android:focusableInTouchMode="true"
                 android:fontFamily="@font/naver_bold"
                 android:marqueeRepeatLimit="marquee_forever"
+                android:maxLines="1"
                 android:scrollHorizontally="true"
                 android:singleLine="true"
-                android:text="TextView"
+                android:text="@{alarmData.name}"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/deleteImage"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Alarm name" />
 
             <ImageView
                 android:id="@+id/deleteImage"
@@ -71,9 +77,9 @@
                 android:layout_weight="1"
                 android:fontFamily="@font/nanumgothicextrabold"
                 android:gravity="center"
-                android:text="00"
                 android:textColor="@color/white"
-                android:textSize="30sp" />
+                android:textSize="30sp"
+                app:hour="@{alarmData.hour}" />
 
             <TextView
                 android:id="@+id/Textview"
@@ -93,9 +99,10 @@
                 android:layout_weight="1"
                 android:fontFamily="@font/nanumgothicextrabold"
                 android:gravity="center"
-                android:text="00"
                 android:textColor="@color/white"
-                android:textSize="30sp" />
+                android:textSize="30sp"
+                app:min="@{alarmData.minute}"
+                tools:text="00" />
 
         </LinearLayout>
 
@@ -114,7 +121,9 @@
                 android:gravity="center"
                 android:text="@string/monday_short"
                 android:textColor="@color/new_subTextColor"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:week="@{weekend.WEEK}"
+                app:weekClicked="@{alarmData.mon}" />
 
             <TextView
                 android:id="@+id/tueText"
@@ -125,7 +134,9 @@
                 android:gravity="center"
                 android:text="@string/tuesday_short"
                 android:textColor="@color/new_subTextColor"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:week="@{weekend.WEEK}"
+                app:weekClicked="@{alarmData.tue}" />
 
             <TextView
                 android:id="@+id/wedText"
@@ -136,7 +147,9 @@
                 android:gravity="center"
                 android:text="@string/wednesday_short"
                 android:textColor="@color/new_subTextColor"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:week="@{weekend.WEEK}"
+                app:weekClicked="@{alarmData.wed}" />
 
             <TextView
                 android:id="@+id/thuText"
@@ -147,7 +160,9 @@
                 android:gravity="center"
                 android:text="@string/thursday_short"
                 android:textColor="@color/new_subTextColor"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:week="@{weekend.WEEK}"
+                app:weekClicked="@{alarmData.thu}" />
 
             <TextView
                 android:id="@+id/friText"
@@ -158,7 +173,9 @@
                 android:gravity="center"
                 android:text="@string/friday_short"
                 android:textColor="@color/new_subTextColor"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:week="@{weekend.WEEK}"
+                app:weekClicked="@{alarmData.fri}" />
 
             <TextView
                 android:id="@+id/satText"
@@ -169,7 +186,9 @@
                 android:gravity="center"
                 android:text="@string/saturday_short"
                 android:textColor="@color/new_subTextColor"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:week="@{weekend.SAT}"
+                app:weekClicked="@{alarmData.sat}"/>
 
             <TextView
                 android:id="@+id/sunText"
@@ -180,7 +199,9 @@
                 android:gravity="center"
                 android:text="@string/sunday_short"
                 android:textColor="@color/new_subTextColor"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                app:week="@{weekend.SUN}"
+                app:weekClicked="@{alarmData.sun}"/>
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -194,7 +215,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_no_vib" />
+                app:srcCompat="@drawable/ic_no_vib"
+                app:vibrateMode="@{alarmData.vibration}" />
 
             <ImageView
                 android:id="@+id/volume_imageView"
@@ -204,6 +226,7 @@
                 app:layout_constraintStart_toEndOf="@+id/vib_imageView"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/vol0"
+                app:volume="@{alarmData.volume}"
                 tools:layout_editor_absoluteY="0dp" />
 
             <com.google.android.material.switchmaterial.SwitchMaterial
