--- a/app/src/main/res/layout/activity_normal_alarm.xml
+++ b/app/src/main/res/layout/activity_normal_alarm.xml
@@ -27,6 +27,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:clickable="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
@@ -44,8 +46,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
-                    android:maxLines="1"
                     android:inputType="text"
+                    android:maxLines="1"
                     android:text="@{alarmData.name}"
                     android:textColor="@color/white" />
             </com.google.android.material.textfield.TextInputLayout>
