알람 셋팅 버그 수정 1. 일반 알람에서 12시에서 분을 돌리면 강제로 "오후"로 설정되는 버그 수정 2. 알람 이름이 제대로 업데이트 안되는 버그 수정 3. 알람 이름 포커스 버그 수정

--- a/app/src/main/res/layout/activity_normal_alarm.xml
+++ b/app/src/main/res/layout/activity_normal_alarm.xml
@@ -12,6 +12,10 @@
         <variable
             name="weekend"
             type="com.easyo.pairalarm.database.table.Weekend" />
+
+        <variable
+            name="manualChangeForHour"
+            type="Boolean" />
     </data>
 
     <ScrollView
@@ -67,7 +71,8 @@
                     android:layout_marginStart="25dp"
                     android:theme="@style/numberPickerCustomTheme"
                     app:hourForAMPM="@{alarmData.hour}"
-                    app:minForAMPM="@{alarmData.minute}" />
+                    app:minForAMPM="@{alarmData.minute}"
+                    app:manualChange="@{manualChangeForHour}"/>
 
                 <NumberPicker
                     android:id="@+id/numberPickerHour"
