--- a/app/src/main/res/layout/alarm_item.xml
+++ b/app/src/main/res/layout/alarm_item.xml
@@ -16,12 +16,12 @@
 
     <LinearLayout
         android:id="@+id/itemLayout"
-        android:layout_width="180dp"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="4dp"
         android:background="@drawable/item_rounded_corner_clear"
         android:orientation="vertical"
-        android:padding="15dp">
+        android:padding="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -79,7 +79,8 @@
                 android:gravity="center"
                 android:textColor="@color/white"
                 android:textSize="30sp"
-                app:hour="@{alarmData.hour}" />
+                app:hour="@{alarmData.hour}"
+                tools:text="00" />
 
             <TextView
                 android:id="@+id/Textview"
@@ -188,7 +189,7 @@
                 android:textColor="@color/new_subTextColor"
                 android:textSize="20sp"
                 app:week="@{weekend.SAT}"
-                app:weekClicked="@{alarmData.sat}"/>
+                app:weekClicked="@{alarmData.sat}" />
 
             <TextView
                 android:id="@+id/sunText"
@@ -201,7 +202,7 @@
                 android:textColor="@color/new_subTextColor"
                 android:textSize="20sp"
                 app:week="@{weekend.SUN}"
-                app:weekClicked="@{alarmData.sun}"/>
+                app:weekClicked="@{alarmData.sun}" />
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
