해상도에 맞게 레이아웃 수정(아래의 해상도에서 확인) 1. WQHD 2. FHD+ 3. HD+

--- a/app/src/main/res/layout/alarm_item.xml
+++ b/app/src/main/res/layout/alarm_item.xml
@@ -18,7 +18,7 @@
         android:id="@+id/itemLayout"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
+        android:layout_margin="@dimen/element_spacing_small"
         android:background="@drawable/item_rounded_corner_clear"
         android:orientation="vertical"
         android:padding="8dp">
@@ -33,8 +33,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:ellipsize="marquee"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
                 android:fontFamily="@font/naver_bold"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:maxLines="1"
@@ -43,6 +41,8 @@
                 android:text="@{alarmData.name}"
                 android:textColor="@color/white"
                 android:textSize="18sp"
+                android:paddingStart="@dimen/element_spacing_normal"
+                android:paddingEnd="@dimen/element_spacing_tiny"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/deleteImage"
                 app:layout_constraintStart_toStartOf="parent"
