알람 설정 레이아웃 디자인 리뉴얼

--- a/app/src/main/res/layout/activity_normal_alarm.xml
+++ b/app/src/main/res/layout/activity_normal_alarm.xml
@@ -61,6 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="5dp"
+                android:background="@drawable/item_stroke_rounded_corner_clear"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -71,8 +72,8 @@
                     android:layout_marginStart="25dp"
                     android:theme="@style/numberPickerCustomTheme"
                     app:hourForAMPM="@{alarmData.hour}"
-                    app:minForAMPM="@{alarmData.minute}"
-                    app:manualChange="@{manualChangeForHour}"/>
+                    app:manualChange="@{manualChangeForHour}"
+                    app:minForAMPM="@{alarmData.minute}" />
 
                 <NumberPicker
                     android:id="@+id/numberPickerHour"
@@ -104,6 +105,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/element_spacing_xnormal"
+                android:background="@drawable/item_stroke_rounded_corner_clear"
+                android:padding="@dimen/element_spacing_tiny"
                 android:orientation="horizontal">
 
                 <!-- 요일 시작-->
@@ -113,7 +117,7 @@
                     android:layout_height="58dp"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:backgroundTint="@android:color/transparent"
+                    android:backgroundTint="@color/itemBackground"
                     android:fontFamily="@font/naver_bold"
                     android:paddingLeft="0dp"
                     android:paddingRight="0dp"
@@ -132,7 +136,7 @@
                     android:layout_height="58dp"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:backgroundTint="@android:color/transparent"
+                    android:backgroundTint="@color/itemBackground"
                     android:fontFamily="@font/naver_bold"
                     android:paddingLeft="0dp"
                     android:paddingRight="0dp"
@@ -151,7 +155,7 @@
                     android:layout_height="58dp"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:backgroundTint="@android:color/transparent"
+                    android:backgroundTint="@color/itemBackground"
                     android:fontFamily="@font/naver_bold"
                     android:paddingLeft="0dp"
                     android:paddingRight="0dp"
@@ -170,7 +174,7 @@
                     android:layout_height="58dp"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:backgroundTint="@android:color/transparent"
+                    android:backgroundTint="@color/itemBackground"
                     android:fontFamily="@font/naver_bold"
                     android:paddingLeft="0dp"
                     android:paddingRight="0dp"
@@ -189,7 +193,7 @@
                     android:layout_height="58dp"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:backgroundTint="@android:color/transparent"
+                    android:backgroundTint="@color/itemBackground"
                     android:fontFamily="@font/naver_bold"
                     android:paddingLeft="0dp"
                     android:paddingRight="0dp"
@@ -208,7 +212,7 @@
                     android:layout_height="58dp"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:backgroundTint="@android:color/transparent"
+                    android:backgroundTint="@color/itemBackground"
                     android:fontFamily="@font/naver_bold"
                     android:paddingLeft="0dp"
                     android:paddingRight="0dp"
@@ -227,7 +231,7 @@
                     android:layout_height="58dp"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:backgroundTint="@android:color/transparent"
+                    android:backgroundTint="@color/itemBackground"
                     android:fontFamily="@font/naver_bold"
                     android:paddingLeft="0dp"
                     android:paddingRight="0dp"
@@ -244,7 +248,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                >
 
                 <ImageView
                     android:id="@+id/image_vibration"
@@ -290,17 +295,17 @@
                     android:enabled="true"
                     android:gravity="center_vertical"
                     app:fb_backgroundColor="@color/main_orange"
-                    app:fb_cornerRadius="10dp"
+                    app:fb_cornerRadius="@dimen/custom_button_corner_radius"
                     app:fb_divColor="#fff"
-                    app:fb_divHeight="40dp"
-                    app:fb_divWidth="1dp"
+                    app:fb_divHeight="@dimen/custom_button_div_height"
+                    app:fb_divWidth="@dimen/custom_button_div_width"
                     app:fb_icon="@drawable/ic_baseline_music"
                     app:fb_iconColor="#FFF"
-                    app:fb_iconHeight="28dp"
-                    app:fb_iconMarginEnd="10dp"
-                    app:fb_iconMarginStart="10dp"
+                    app:fb_iconHeight="@dimen/custom_button_icon_height"
+                    app:fb_iconMarginEnd="@dimen/custom_button_icon_margin_end"
+                    app:fb_iconMarginStart="@dimen/custom_button_icon_margin_start"
                     app:fb_iconPosition="left"
-                    app:fb_iconWidth="28dp"
+                    app:fb_iconWidth="@dimen/custom_button_icon_width"
                     app:fb_rippleColor="#FBE9E7"
                     app:fb_shape="rectangle"
                     app:fb_text="@string/alarmSet_selectBell"
@@ -316,17 +321,17 @@
                     android:enabled="true"
                     android:gravity="center_vertical"
                     app:fb_backgroundColor="@color/mainColor"
-                    app:fb_cornerRadius="10dp"
+                    app:fb_cornerRadius="@dimen/custom_button_corner_radius"
                     app:fb_divColor="#fff"
-                    app:fb_divHeight="40dp"
-                    app:fb_divWidth="1dp"
+                    app:fb_divHeight="@dimen/custom_button_div_height"
+                    app:fb_divWidth="@dimen/custom_button_div_width"
                     app:fb_icon="@drawable/calculator"
                     app:fb_iconColor="#FFF"
-                    app:fb_iconHeight="28dp"
-                    app:fb_iconMarginEnd="10dp"
-                    app:fb_iconMarginStart="10dp"
+                    app:fb_iconHeight="@dimen/custom_button_icon_height"
+                    app:fb_iconMarginEnd="@dimen/custom_button_icon_margin_end"
+                    app:fb_iconMarginStart="@dimen/custom_button_icon_margin_start"
                     app:fb_iconPosition="left"
-                    app:fb_iconWidth="28dp"
+                    app:fb_iconWidth="@dimen/custom_button_icon_width"
                     app:fb_rippleColor="#FBE9E7"
                     app:fb_shape="rectangle"
                     app:fb_text="@string/alarmSet_selectMode"
