--- a/app/src/main/res/layout/activity_simple_alarm.xml
+++ b/app/src/main/res/layout/activity_simple_alarm.xml
@@ -21,9 +21,9 @@
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:clickable="true"
-            android:orientation="vertical"
             android:focusable="true"
-            android:focusableInTouchMode="true">
+            android:focusableInTouchMode="true"
+            android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/alarmName_editTextLayout"
@@ -40,8 +40,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
-                    android:maxLines="1"
                     android:inputType="text"
+                    android:maxLines="1"
                     android:textColor="@color/white" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -97,6 +97,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
+                android:paddingTop="8dp"
+                android:background="@drawable/button_background_upper"
                 android:orientation="horizontal">
 
                 <com.google.android.material.button.MaterialButton
@@ -109,6 +111,7 @@
                     android:backgroundTint="@color/itemBackground"
                     android:padding="12dp"
                     android:text="@string/alarmSet_60minButton"
+                    android:textColor="@color/white"
                     app:cornerRadius="20dp" />
 
                 <com.google.android.material.button.MaterialButton
@@ -121,6 +124,7 @@
                     android:backgroundTint="@color/itemBackground"
                     android:padding="12dp"
                     android:text="@string/alarmSet_30minButton"
+                    android:textColor="@color/white"
                     app:cornerRadius="20dp" />
 
                 <com.google.android.material.button.MaterialButton
@@ -133,6 +137,7 @@
                     android:backgroundTint="@color/itemBackground"
                     android:padding="12dp"
                     android:text="@string/alarmSet_15minButton"
+                    android:textColor="@color/white"
                     app:cornerRadius="20dp" />
 
             </LinearLayout>
@@ -140,8 +145,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="5dp"
+                android:paddingTop="4dp"
+                android:paddingBottom="8dp"
                 android:layout_marginBottom="20dp"
+                android:background="@drawable/button_background_under"
                 android:orientation="horizontal">
 
                 <com.google.android.material.button.MaterialButton
@@ -154,6 +161,7 @@
                     android:backgroundTint="@color/itemBackground"
                     android:padding="12dp"
                     android:text="@string/alarmSet_10minButton"
+                    android:textColor="@color/white"
                     app:cornerRadius="20dp" />
 
                 <com.google.android.material.button.MaterialButton
@@ -166,6 +174,7 @@
                     android:backgroundTint="@color/itemBackground"
                     android:padding="12dp"
                     android:text="@string/alarmSet_5minButton"
+                    android:textColor="@color/white"
                     app:cornerRadius="20dp" />
 
                 <com.google.android.material.button.MaterialButton
@@ -178,6 +187,7 @@
                     android:backgroundTint="@color/itemBackground"
                     android:padding="12dp"
                     android:text="@string/alarmSet_1minButton"
+                    android:textColor="@color/white"
                     app:cornerRadius="20dp" />
 
             </LinearLayout>
@@ -219,29 +229,31 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="center"
                 android:orientation="horizontal"
                 android:paddingTop="10dp">
 
                 <com.github.nikartm.button.FitButton
                     android:id="@+id/selectBell_button"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    android:layout_margin="@dimen/element_spacing_xnormal"
                     android:layout_weight="1"
                     android:enabled="true"
                     android:gravity="center_vertical"
                     app:fb_backgroundColor="@color/main_orange"
-                    app:fb_cornerRadius="10dp"
+                    app:fb_cornerRadius="@dimen/custom_button_corner_radius"
                     app:fb_divColor="#fff"
-                    app:fb_divHeight="40dp"
-                    app:fb_divWidth="1dp"
+                    app:fb_divHeight="@dimen/custom_button_div_height"
+                    app:fb_divWidth="@dimen/custom_button_div_width"
                     app:fb_icon="@drawable/ic_baseline_music"
                     app:fb_iconColor="#FFF"
-                    app:fb_iconHeight="28dp"
-                    app:fb_iconMarginEnd="10dp"
-                    app:fb_iconMarginStart="10dp"
+                    app:fb_iconHeight="@dimen/custom_button_icon_height"
+                    app:fb_divMarginStart="10dp"
+                    app:fb_iconMarginEnd="@dimen/custom_button_icon_margin_end"
+                    app:fb_iconMarginStart="@dimen/custom_button_icon_margin_start"
                     app:fb_iconPosition="left"
-                    app:fb_iconWidth="28dp"
+                    app:fb_iconWidth="@dimen/custom_button_icon_width"
                     app:fb_rippleColor="#FBE9E7"
                     app:fb_shape="rectangle"
                     app:fb_text="@string/alarmSet_selectBell"
@@ -250,24 +262,25 @@
 
                 <com.github.nikartm.button.FitButton
                     android:id="@+id/selectMode_button"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    android:layout_margin="@dimen/element_spacing_xnormal"
                     android:layout_weight="1"
                     android:enabled="true"
                     android:gravity="center_vertical"
                     app:fb_backgroundColor="@color/mainColor"
-                    app:fb_cornerRadius="10dp"
+                    app:fb_cornerRadius="@dimen/custom_button_corner_radius"
                     app:fb_divColor="#fff"
-                    app:fb_divHeight="40dp"
-                    app:fb_divWidth="1dp"
+                    app:fb_divHeight="@dimen/custom_button_div_height"
+                    app:fb_divWidth="@dimen/custom_button_div_width"
                     app:fb_icon="@drawable/calculator"
                     app:fb_iconColor="#FFF"
-                    app:fb_iconHeight="28dp"
-                    app:fb_iconMarginEnd="10dp"
-                    app:fb_iconMarginStart="10dp"
+                    app:fb_iconHeight="@dimen/custom_button_icon_height"
+                    app:fb_divMarginStart="8dp"
+                    app:fb_iconMarginEnd="@dimen/custom_button_icon_margin_end"
+                    app:fb_iconMarginStart="@dimen/custom_button_icon_margin_start"
                     app:fb_iconPosition="left"
-                    app:fb_iconWidth="28dp"
+                    app:fb_iconWidth="@dimen/custom_button_icon_width"
                     app:fb_rippleColor="#FBE9E7"
                     app:fb_shape="rectangle"
                     app:fb_text="@string/alarmSet_selectMode"
